fix: rename Load button to Load Example for clarity (Issue #12)
- Changed buttons.load translation from 'Load'/'Laden' to 'Load Example'/'Beispiel laden'
- Updated E2E test expectations in i18n.feature (3 scenarios)
- Updated character-dom.steps.ts test expectation
- All 164 unit tests passed
- All 310 E2E scenarios passed

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -3,7 +3,7 @@
     "title": "Numenera Charakterbogen"
   },
   "buttons": {
-    "load": "Laden",
+    "load": "Beispiel laden",
     "import": "Importieren",
     "export": "Exportieren",
     "new": "Neu"
