--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -3,7 +3,7 @@
     "title": "Numenera Character Sheet"
   },
   "buttons": {
-    "load": "Load",
+    "load": "Load Example",
     "import": "Import",
     "export": "Export",
     "new": "New"
