feat: add portrait display modal on click (Issue #10)
- Created PortraitDisplayModal component to display portrait at full size
- Added portrait-display-modal.css with dark backdrop and image viewer
- Image capped at 1500×2000px as specified
- Added translations for portraitView and close button
- Updated ModalService with openPortraitModal() method
- Made portrait image clickable in BasicInfo component
- Modal closes on backdrop click, close button, or Escape key
- All 310 E2E scenarios pass

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -6,7 +6,8 @@
     "load": "Beispiel laden",
     "import": "Importieren",
     "export": "Exportieren",
-    "new": "Neu"
+    "new": "Neu",
+    "close": "Schließen"
   },
   "character": {
     "name": "Name",
@@ -27,6 +28,7 @@
     "portraitUpload": "Portrait hochladen",
     "portraitRemove": "Portrait entfernen",
     "portraitChange": "Portrait ändern",
+    "portraitView": "Portrait anzeigen",
     "xp": "EP",
     "shins": "Shins"
   },
