fix: Add i18n support for validation error messages
- Add translation keys for name, descriptor, and focus validation errors
- Update validators to use t() function for internationalized messages
- Fix circular dependency by moving validator functions before FIELD_CONFIGS
- Initialize i18n in test setup to support translated error messages
- Update test expectations to use flexible error matching
- All 302 unit tests passing

Fixes issue: Translation '<Name> cannot be empty' missing

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -138,6 +138,18 @@
     "cancel": "Abbrechen"
   },
   "validation": {
+    "name": {
+      "empty": "Name darf nicht leer sein",
+      "tooLong": "Name muss 50 Zeichen oder weniger haben"
+    },
+    "descriptor": {
+      "empty": "Deskriptor darf nicht leer sein",
+      "tooLong": "Deskriptor muss 30 Zeichen oder weniger haben"
+    },
+    "focus": {
+      "empty": "Fokus darf nicht leer sein",
+      "tooLong": "Fokus muss 50 Zeichen oder weniger haben"
+    },
     "recoveryModifier": {
       "invalid": "Erholungsmodifikator muss eine Zahl zwischen -10 und 20 sein"
     },
