Fix E2E tests for export enhancement feature
- Simplified export-enhancement.feature from 14 to 10 focused scenarios
- Added tests for new button behavior (Export → Quick Export + Save As)
- Fixed all step definition ambiguities and duplications
- Updated unit tests for new character schema (flat structure)
- Changed filename format to .numenera extension without timestamp
- Fixed ESLint configuration to recognize File System Access API types
- All 326 E2E scenarios passing
- All 326 unit tests passing

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -6,6 +6,8 @@
     "load": "Beispiel laden",
     "import": "Importieren",
     "export": "Exportieren",
+    "quickExport": "Schnellexport",
+    "saveAs": "Speichern unter...",
     "new": "Neu",
     "close": "Schließen"
   },
