--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -6,6 +6,8 @@
     "load": "Load Example",
     "import": "Import",
     "export": "Export",
+    "quickExport": "Quick Export",
+    "saveAs": "Save As...",
     "new": "New",
     "close": "Close"
   },
