feat: Add auto-save with debounced save indicator
Implements Phase 2: Auto-Save with Timestamp feature

Features:
- Debounced auto-save (300ms) via AutoSaveService
- Save indicator showing last save timestamp
- Positioned subtly in lower-right corner
- Updates on every character change
- Fully tested with unit and E2E tests

Components:
- AutoSaveService: Manages debounced saves with event emission
- SaveIndicator: Visual component showing save timestamp
- I18n support (EN/DE) for 'Last saved' text

Test Coverage:
- 13 new unit tests for AutoSaveService (debouncing, timestamps, events)
- 11 new unit tests for SaveIndicator component
- 5 new E2E scenarios for auto-save behavior verification

Technical Changes:
- Integrated auto-save into character-updated event flow
- Centralized save logic with debouncing
- Timestamp tracking and display
- All 350 unit tests passing

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -210,5 +210,8 @@
       "empty": "Keine Notizen",
       "placeholder": "Zum Bearbeiten klicken..."
     }
+  },
+  "autoSave": {
+    "lastSaved": "Zuletzt gespeichert"
   }
 }
