--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -210,5 +210,8 @@
       "empty": "No notes",
       "placeholder": "Click to edit notes..."
     }
+  },
+  "autoSave": {
+    "lastSaved": "Last saved"
   }
 }
