feat(version-history): Phase 3 Steps 3.1-3.6 - Navigator UI Components
Implements version navigation UI with TDD/BDD methodology:

Components Completed:
- VersionNavigator: Arrow-based navigation with version counter
- VersionWarningBanner: Compact warning for read-only mode
- VersionState: Centralized state management service

Key Features:
- Fixed positioning in top-right corner (outside character sheet)
- Navigator at top: 1rem, Banner below at top: 4.5rem
- Visibility: Navigator hidden when ≤1 version
- Full i18n support (English + German)
- Event-driven architecture for UI updates

Test Results:
- 484/484 unit tests passing (100%)
- 42 new unit tests added (all passing)
- 3/31 E2E scenarios passing (baseline, 28 pending)
- No regressions in existing features

Implementation Details:
- Inline styles (cssText) for fixed positioning
- Compact, non-intrusive design
- Proper button disabled states at boundaries
- Timestamp and change description display

Files Added:
- src/components/VersionNavigator.ts
- src/components/VersionWarningBanner.ts
- src/services/versionState.ts
- tests/unit/versionNavigator.test.ts (15 tests)
- tests/unit/versionWarningBanner.test.ts (8 tests)
- tests/unit/versionState.test.ts (19 tests)
- tests/e2e/features/version-history.feature (31 scenarios)
- tests/e2e/step-definitions/version-history.steps.ts
- tests/e2e/support/testStorageHelper.ts

Files Modified:
- src/i18n/locales/en.json (added versionHistory translations)
- src/i18n/locales/de.json (added versionHistory translations)
- docs/CURRENT_FEATURE.md (Phase 3 progress update)

Next: Step 3.7 - Read-Only Mode Manager (TDD)

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -213,5 +213,14 @@
   },
   "autoSave": {
     "lastSaved": "Zuletzt gespeichert"
+  },
+  "versionHistory": {
+    "versionCounter": "Version {{current}} von {{total}}",
+    "navigateBackward": "Zur vorherigen Version navigieren",
+    "navigateForward": "Zur nächsten Version navigieren",
+    "warningBanner": {
+      "title": "Sie betrachten eine alte Version dieses Charakters",
+      "restoreButton": "Zur neuesten wiederherstellen"
+    }
   }
 }
