test(conflict): add unit tests for conflict detection infrastructure
Replace @wip E2E scenarios with comprehensive unit tests for ConflictDetectionService and ConflictWarningModal.

Changes:
- Delete 4 @wip Multi-Tab Conflict Detection scenarios (BroadcastChannel cannot work across Playwright contexts)
- Add 23 unit tests for ConflictDetectionService (dirty state, ETag management, conflict detection)
- Add 28 unit tests for ConflictWarningModal (conflict modal, newer version banner, UI states)
- Fix ESLint unused variable warnings in conflict detection code
- Restructure conflict i18n keys to nested format for ARIA labels

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -223,5 +223,27 @@
       "returnButton": "Zur aktuellen Version",
       "restoreButton": "Version Wiederherstellen"
     }
+  },
+  "conflict": {
+    "title": "Versionskonflikt erkannt",
+    "message": "Ein anderer Tab hat Änderungen an diesem Charakter gespeichert, während Sie bearbeitet haben. Ihre ungespeicherten Änderungen könnten verloren gehen.",
+    "hint": "Wählen Sie, wie der Konflikt gelöst werden soll:",
+    "loadRemote": {
+      "label": "Neueste Version laden",
+      "aria": "Ihre Änderungen verwerfen und die neueste Version aus dem anderen Tab laden"
+    },
+    "saveLocal": {
+      "label": "Meine Änderungen trotzdem speichern",
+      "aria": "Die anderen Änderungen überschreiben und Ihre Version speichern"
+    },
+    "newerVersionAvailable": "Eine neuere Version dieses Charakters ist verfügbar.",
+    "reload": {
+      "label": "Neu laden",
+      "aria": "Seite neu laden, um die neueste Version zu laden"
+    },
+    "dismiss": {
+      "label": "Schließen",
+      "aria": "Diese Benachrichtigung schließen"
+    }
   }
 }
