feat(settings): add settings gear with language switcher
Phase 1 of Settings & Layout Customization feature set.

Changes:
- Add SettingsGear component with dropdown panel
- Language switcher with flag icons (🇬🇧/🇩🇪)
- Disabled Reset Layout placeholder for Phase 3
- Panel closes with Escape key or click outside
- Fix nonsensical button count test in domStructure.test.ts
- E2E tests: 8/8 scenarios pass
- Unit tests: 675/675 pass

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -11,6 +11,18 @@
     "new": "Neu",
     "close": "Schließen"
   },
+  "settings": {
+    "title": "Einstellungen",
+    "language": "Sprache",
+    "resetLayout": "Layout zurücksetzen",
+    "resetLayoutDisabled": "Layout-Anpassung kommt bald",
+    "aria": {
+      "openSettings": "Einstellungen öffnen",
+      "closeSettings": "Einstellungen schließen",
+      "selectEnglish": "Zu Englisch wechseln",
+      "selectGerman": "Zu Deutsch wechseln"
+    }
+  },
   "character": {
     "name": "Name",
     "tier": "Stufe",
